[package]
name = "trunk-fuzz"
version = "0.0.0"
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
trunk = { path = ".." }
honggfuzz = "0.5.55"

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[[bin]]
name = "parse_public_url"
path = "fuzz_targets/parse_public_url.rs"